--- a/src/test/resources/files/iframeAPITest.html
+++ b/src/test/resources/files/iframeAPITest.html
@@ -9,6 +9,7 @@
     const params = new URLSearchParams(document.location.search);
     const config = JSON.parse(params.get("config"));
     const interfaceConfig = JSON.parse(params.get("interfaceConfig"));
+    const password = params.get("password");
 
     const uInfoObj = params.get("userInfo");
     const userInfo = uInfoObj && uInfoObj.length > 0 ?
@@ -27,6 +28,20 @@
     externalAPIScript.type = "text/javascript";
     externalAPIScript.onload = function(){
         window.jitsiAPI = new JitsiMeetExternalAPI(domain, options);
+        // we use this to save data from api to be accessible to tests
+        window.jitsiAPI.test = {};
+        window.jitsiAPI.addEventListener('participantRoleChanged', function(event) {
+            if (event.role === "moderator") {
+                window.jitsiAPI.test.isModerator = true;
+            }
+        });
+        if (password && password.length > 0) {
+            // join a protected channel with the password supplied
+            window.jitsiAPI.on('passwordRequired', function ()
+            {
+                window.jitsiAPI.executeCommand('password', password);
+            });
+        }
     }
     document.getElementsByTagName('head')[0].appendChild(externalAPIScript);
 </script>
