feat: Testing event audioAvailabilityChanged.
https://jitsi.github.io/handbook/docs/dev-guide/dev-guide-iframe#audioavailabilitychanged

--- a/src/test/resources/files/iframeAPITest.html
+++ b/src/test/resources/files/iframeAPITest.html
@@ -35,6 +35,9 @@
                 window.jitsiAPI.test.isModerator = true;
             }
         });
+        window.jitsiAPI.addListener('audioAvailabilityChanged', function(event) {
+            window.jitsiAPI.test.audioAvailabilityChanged = event;
+        });
         if (password && password.length > 0) {
             // join a protected channel with the password supplied
             window.jitsiAPI.on('passwordRequired', function ()
