--- a/src/test/resources/files/iframeAPITest.html
+++ b/src/test/resources/files/iframeAPITest.html
@@ -38,6 +38,9 @@
         window.jitsiAPI.addListener('audioAvailabilityChanged', function(event) {
             window.jitsiAPI.test.audioAvailabilityChanged = event;
         });
+        window.jitsiAPI.addListener('videoConferenceJoined', function(event) {
+            window.jitsiAPI.test.videoConferenceJoined = event;
+        });
         if (password && password.length > 0) {
             // join a protected channel with the password supplied
             window.jitsiAPI.on('passwordRequired', function ()
